test/bad/scope0.pacc
/*
nopacc1 "pacc: fatal: name \`a' rebound"
*/

# Names are lexically scoped over sequences, but it is an error to rebind a
# name.

P :: char * ← a:A a:B "c" → a

A ← "a" { ref_str() }
B ← "b" { ref_str() }
